# sepro7copie

./: README.md  codecov.yml  docker-compose.yml
.github/workflows/: ci-booking.yml  ci-desk-integration.yml  ci-desk-inventory.yml  ci-gateway.yml  ci-occupancy.yml  ci-scheduler-service.yml  ci-user.yml  code-coverage.yml
backend/booking-service/: .coverage  .gitignore  Dockerfile  README.md  coverage.xml  main.py  pyproject.toml
backend/booking-service/migrations/: env.py
backend/booking-service/migrations/versions/: 281c2b9642d2_actually_replace_date_with_datetime.py  2af27c485b1f_create_initial_tables.py  33a8d5aa0831_add_dummy_field.py  c30584f722d6_replace_date_with_datetime.py
backend/booking-service/src/api/: dependencies.py
backend/booking-service/src/messaging/: direct_exchanges.py
backend/booking-service/src/repositories/: booking_repository.py
backend/booking-service/src/services/: desk_booking_service.py
backend/booking-service/tests/unit/: test_main.py
backend/desk-integration-service/: .env.example  main.py  package-lock.json  pyproject.toml
backend/desk-integration-service/src/messaging/: direct_exchanges.py  direct_message_facade.py  messaging_manager.py  pubsub_exchanges.py  pubsub_facade.py  rabbitmq_publisher.py
backend/desk-integration-service/src/routers/: desk_integration.py
backend/desk-integration-service/src/services/: desk_service.py
backend/desk-integration-service/tests/unit/: test_dummy.py  test_main.py
backend/desk-inventory-service/: .gitignore  main.py  pyproject.toml
backend/gateway/: .coverage  Dockerfile  README.md  coverage.xml  main.py  pyproject.toml
backend/gateway/src/: config.py
backend/gateway/src/routers/: booking_proxy.py  occupancy_proxy.py  scheduler_proxy.py
backend/gateway/src/utils/: http_client.py
backend/gateway/tests/unit/: test_booking_proxy.py  test_main.py
backend/occupancy-service/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/occupancy-service/migrations/: env.py
backend/occupancy-service/migrations/versions/: 4e0f8c917225_properly_initialise_occupancy_table.py
backend/occupancy-service/src/api/: dependencies.py
backend/occupancy-service/src/messaging/: direct_exchanges.py  pubsub_exchanges.py
backend/scheduler-service/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.standalone.yml  main.py  pyproject.toml  rabbitmq.md
backend/scheduler-service/migrations/: env.py
backend/scheduler-service/src/api/: dependencies.py
backend/scheduler-service/src/models/: scheduler.py
backend/scheduler-service/src/models/db/: schedule.py
backend/scheduler-service/src/repositories/: __init__.py  schedule_repository.py
backend/scheduler-service/src/routers/: scheduler.py
backend/scheduler-service/src/services/: desk_service.py  rabbitmq_client.py  scheduler_service.py
backend/scheduler-service/tests/integration/: conftest.py  test_desk_service.py
backend/scheduler-service/tests/unit/: UNIT_TESTS_README.md  conftest.py  test_desk_service.py  test_rabbitmq_client.py  test_scheduler_service.py
backend/user-service/: .gitignore  Dockerfile  pyproject.toml
embedded_pico/DeskOccupancyMonitoring/: .gitignore  CMakeLists.txt  DeskOccupancyMonitoring.cpp  lwipopts.h
frontend/desk-booking-system/: README.md  package-lock.json  package.json
frontend/desk-booking-system/src/: App.vue  main.ts
mqtt_broker/: .gitignore
mqtt_broker/mosquitto/: docker-compose.yml
(+94 files in other folders)
